PodSecurityPolicy/selinux/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: selinux
tests:
- name: require-matching-selinux-options
  template: constraintTemplate.yaml
  constraint: constraint.yaml
  cases:
  - name: example-disallowed
    object: example/example_disallowed.yaml
    assertions:
    - violations: yes
  - name: example-allowed
    object: example/example_allowed.yaml
    assertions:
    - violations: no
  - name: disallowed-ephemeral
    object: example/disallowed_ephemeral.yaml
    assertions:
    - violations: yes
  - name: update
    object: example/update.yaml
    assertions:
    - violations: no
